--- a/basic-client/chat.html
+++ b/basic-client/chat.html
@@ -11,10 +11,9 @@
            <input type="submit" value="Send">
        </form>
 
-       <ul id="cppp"></ul>
+       <ul id="message-container"></ul>
 
        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-       <script src="http://localhost:7777/socket.io/socket.io.js"></script>
        <script src="/socket.io/socket.io.js"></script>
 
        <script src="client.js"></script>
