Added Randomly generated user-id's to the chat.

--- a/basic-client/chat.html
+++ b/basic-client/chat.html
@@ -6,6 +6,7 @@
    </head>
    <body>
        <h1> Chat! </h1>
+       <h3 id="myIdField"></h3>
        <form>
            <input id="message" type="text" placeholder="message">
            <input type="submit" value="Send">
